redirect to login page when not authenticated

--- a/Fb/Fb.Web/Views/Shared/_Layout.cshtml
+++ b/Fb/Fb.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
     <head>
         <link rel="icon" type="image/png" href="~/Content/images/favicon.png" />
         <meta charset="utf-8" />
-        <title ng-bind="'Ads - ' + title">Facebook - Coursework</title>
+        <title ng-bind="'Facebook - ' + title">Facebook - Coursework</title>
         @Styles.Render("~/bundles/css/site")
         @RenderSection("styles", false)
     </head>
