--- a/Fb/Fb.Web/App/templates/home.html
+++ b/Fb/Fb.Web/App/templates/home.html
@@ -1,4 +1,12 @@
-﻿<div class="col-sm-8 col-xs-12">
+﻿<div class="col-sm-10 col-xs-12">
+    <!-- Text input-->
+    <ng-form name="submit-status-form">
+        <div class="form-group" style="margin-bottom: 50px;">
+            <textarea ng-model="status.text" id="text" name="text" placeholder="What do you think?" class="form-control" ng-required="true"></textarea>
+            <button class="btn btn-primary pull-right" name="publish" >Publish</button>
+        </div>
+    </ng-form>
+
     <div ng-repeat="ad in ads.ads">
         <div class="panel panel-primary">
             <div class="panel-heading">
@@ -9,7 +17,7 @@
             </div>
             <div class="panel-body">
                 <div class="col-sm-3 panel-image">
-                    <img ng-src="{{ad.imageDataUrl}}" src="../../Content/images/nophoto.jpg" class="img-responsive" />
+                    <img ng-src="{{ad.imageDataUrl}}" src="../../Content/images/nophoto.jpg" class="img-responsive"/>
                 </div>
                 <div class="col-sm-9">
                     <div class="well" ng-bind="ad.text"></div>
@@ -20,7 +28,8 @@
                     <div class="row">
                         <div class="col-sm-2">Email: </div>
                         <div class="col-sm-10">
-                            <a ng-href="mailto: {{ad.ownerEmail}}" ng-bind="ad.ownerEmail"></a></div>
+                            <a ng-href="mailto: {{ad.ownerEmail}}" ng-bind="ad.ownerEmail"></a>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-2">Phone: </div>
@@ -34,7 +43,7 @@
         Sorry, there are no advertisements matching these criterias...
     </div>
 
-    <!--    Pagination-->
+    <!-- Pagination-->
     <div class="row text-center" ng-show="ads.numItems > itemsPerPage">
         <pagination boundary-links="true" total-items="ads.numItems" items-per-page="itemsPerPage" ng-model="currentPage" ng-click="loadPage()"></pagination>
     </div>
@@ -43,38 +52,22 @@
 <div class="col-sm-2 col-xs-12">
     <ul class="nav nav-pills nav-stacked margin-bottom-15">
         <li>
-            <h4>Categories</h4>
+            <h4>Friends</h4>
         </li>
-        <li ng-class="{'active': !pageSettings.categoryId}"
-            ng-click="filterCategory('')">
-            <a href>All</a>
-        </li>
-        <li ng-repeat="category in allCategories"
-            ng-class="{'active': pageSettings.categoryId==category.id}"
-            ng-click="filterCategory(category.id)">
+        <li>
             <a href>
-                {{category.name}}
+                User 1
+            </a>
+        </li>
+        <li>
+            <a href>
+                User 2
+            </a>
+        </li>
+        <li>
+            <a href>
+                User 3
             </a>
         </li>
     </ul>
-</div>
-<div class="col-sm-2 col-xs-12">
-    <div data-example-id="vertical-button-group">
-        <ul class="nav nav-pills nav-stacked margin-bottom-15">
-            <li>
-                <h4>Towns</h4>
-            </li>
-            <li ng-class="{'active': !pageSettings.townId}"
-                ng-click="filterTown('')">
-                <a href>All</a>
-            </li>
-            <li ng-repeat="town in allTowns"
-                ng-class="{'active': pageSettings.townId==town.id}"
-                ng-click="filterTown(town.id)">
-                <a href>
-                    {{town.name}}
-                </a>
-            </li>
-        </ul>
-    </div>
 </div>
