work on home page, update seed method

--- a/Fb/Fb.Web/App/templates/home.html
+++ b/Fb/Fb.Web/App/templates/home.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="well margin-top-15" ng-show="!ads.numItems">
-        Sorry, there are no advertisements matching these criterias...
+        Sorry, there are no posts on your wall...
     </div>
 
     <!-- Pagination-->
