--- a/Fb/Fb.Web/App/templates/home.html
+++ b/Fb/Fb.Web/App/templates/home.html
@@ -7,45 +7,30 @@
         </div>
     </ng-form>
 
-    <div ng-repeat="ad in ads.ads">
+    <div ng-repeat="post in posts.posts">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">
-                    <span ng-bind="ad.title"></span>
-                    <span class="pull-right" ng-bind="ad.date| date:'dd/MMM/yyyy'"></span>
+                <h3 class="panel-title" style="padding:0">
+                    <img ng-src="{{post.imageDataUrl}}" src="../../Content/images/nophoto.jpg" class="img-responsive" style="max-height: 50px; display: inline-block" />
+                    <span ng-bind="post.ownerName"></span>
+                    <span class="pull-right" ng-bind="post.date| date:'dd/MMM/yyyy'"></span>
                 </h3>
             </div>
             <div class="panel-body">
-                <div class="col-sm-3 panel-image">
-                    <img ng-src="{{ad.imageDataUrl}}" src="../../Content/images/nophoto.jpg" class="img-responsive"/>
-                </div>
-                <div class="col-sm-9">
-                    <div class="well" ng-bind="ad.text"></div>
-                    <div class="row">
-                        <div class="col-sm-2">Name: </div>
-                        <div class="col-sm-10" ng-bind="ad.ownerName"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-2">Email: </div>
-                        <div class="col-sm-10">
-                            <a ng-href="mailto: {{ad.ownerEmail}}" ng-bind="ad.ownerEmail"></a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-2">Phone: </div>
-                        <div class="col-sm-10" ng-bind="ad.ownerPhone"></div>
-                    </div>
+                <div class="well" ng-bind="post.text"></div>
+                <div style="font-size: 12px" class="text-muted">
+                    <a href="">Like</a> | <a href="">Comment</a> | <a href="">Share</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="well margin-top-15" ng-show="!ads.numItems">
+    <div class="well margin-top-15" ng-show="!posts.numItems">
         Sorry, there are no posts on your wall...
     </div>
 
     <!-- Pagination-->
-    <div class="row text-center" ng-show="ads.numItems > itemsPerPage">
-        <pagination boundary-links="true" total-items="ads.numItems" items-per-page="itemsPerPage" ng-model="currentPage" ng-click="loadPage()"></pagination>
+    <div class="row text-center" ng-show="posts.numItems > itemsPerPage">
+        <pagination boundary-links="true" total-items="posts.numItems" items-per-page="itemsPerPage" ng-model="currentPage" ng-click="loadPage()"></pagination>
     </div>
 </div>
 
