change favicon start implementing like functionlity redirect from login and register page to home page when user is registered

--- a/Fb/Fb.Web/App/templates/home.html
+++ b/Fb/Fb.Web/App/templates/home.html
@@ -19,7 +19,7 @@
             <div class="panel-body">
                 <div class="well" ng-bind="post.text"></div>
                 <div style="font-size: 12px" class="text-muted">
-                    <a href="">Like</a> | <a href="">Comment</a> | <a href="">Share</a>
+                    <a href="" ng-click="like(post)">Like</a> | <a href="">Comment</a> | <a href="">Share</a>
                 </div>
             </div>
         </div>
