--- a/Fb/Fb.Web/App/templates/searchFriends.html
+++ b/Fb/Fb.Web/App/templates/searchFriends.html
@@ -1,13 +1,34 @@
-﻿<div class="row">
+﻿<form class="row">
     <div class="col-sm-8">
-        <input type="text" ng-model="searchPhrase" class="form-control" placeholder="Searchphrase"/>
+        <input type="text" ng-model="searchPhrase" class="form-control" placeholder="Searchphrase" required="required"/>
     </div>
     <div class="col-sm-2">
         <button ng-click="search(searchPhrase)" class="btn btn-primary">Search</button>
     </div>
-</div>
-<div class="row">
+</form>
+<div class="row" style="margin-bottom: 20px;">
     <div class="col-sm-8">
         <span class="text-muted">Search by username, email or by birthplace.</span>
+    </div>
+</div>
+
+<div ng-repeat="friend in friends">
+    <div class="panel panel-primary">
+        <div class="panel-body">
+            <div class="col-xs-2">
+                <img src="../../Content/images/nophoto.jpg" class="img-responsive" style="max-height: 70px; display: inline-block" />
+            </div>
+            <div class="col-xs-10">
+                <div>
+                    <span class="text-primary">Name: </span><span ng-bind="friend.name"></span>
+                </div>
+                <div>
+                    <span class="text-primary">Town: </span><span ng-bind="friend.townName"></span>
+                </div>
+                <div>
+                    <span class="text-primary">Is friend: </span><span ng-bind="friend.isFriend"></span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
