--- a/Fb/Fb.Web/App/templates/home.html
+++ b/Fb/Fb.Web/App/templates/home.html
@@ -39,20 +39,8 @@
         <li>
             <h4>Friends</h4>
         </li>
-        <li>
-            <a href>
-                User 1
-            </a>
-        </li>
-        <li>
-            <a href>
-                User 2
-            </a>
-        </li>
-        <li>
-            <a href>
-                User 3
-            </a>
+        <li ng-repeat=" fr in friends" ng-bind-html-unsafe="fr.text">
+            <a href="">{{ fr.userName }}</a>
         </li>
     </ul>
 </div>
