--- a/Fb/Fb.Web/App/templates/home.html
+++ b/Fb/Fb.Web/App/templates/home.html
@@ -3,7 +3,7 @@
     <ng-form name="submit-status-form">
         <div class="form-group" style="margin-bottom: 50px;">
             <textarea ng-model="status.text" id="text" name="text" placeholder="What do you think?" class="form-control" ng-required="true"></textarea>
-            <button class="btn btn-primary pull-right" name="publish">Publish</button>
+            <button class="btn btn-primary pull-right" name="publish" ng-click="publishPost(status.text)">Publish</button>
         </div>
     </ng-form>
     <div ng-repeat="post in posts.posts">
